Expanded Navbar now collapses at 1030px and below. This is to prevent it wrapping at this breakpoint.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -376,7 +376,7 @@ footer {
 }
 
 .image-rail-metro {
-    max-width: 576px;
+    max-width: 100%;
 }
 
 .news-rail {
@@ -402,10 +402,8 @@ footer {
 }
 
 .text-metro-lobby {
-    min-height: 335px;
-    height: auto;
+    min-height: 338px;
     margin-top: 15px;
-    margin-left: -15px;
     margin-right: 0;
     padding: 5px;
     background-color: #337ab7;
@@ -587,8 +585,56 @@ footer {
         min-width: 100%;
     }
 
+    .news-rail {
+        max-width: 100%;
+        max-height: 304px;
+    }
+
+    .text-metro-lobby {
+        min-height: 290px;
+    }
+
     .news-air-pollution {
         max-width: 100%;
         max-height: 304px;
+    }
+}
+
+/* Collapse the Navbar at 1030px and below. This is to stop the expanded menu wrapping.
+@media (max-width: 1030px) {
+
+    .navbar-header {
+      float: none;
+    }
+    .navbar-left,.navbar-right {
+      float: none !important;
+    }
+    .navbar-toggle {
+      display: block;
+    }
+    .navbar-collapse {
+      border-top: 1px solid transparent;
+      box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+      top: 0;
+      border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+      display: none!important;
+    }
+    .navbar-nav {
+      float: none!important;
+      margin-top: 7.5px;
+    }
+    .navbar-nav>li {
+      float: none;
+    }
+    .navbar-nav>li>a {
+      padding-top: 10px;
+      padding-bottom: 10px;
+    }
+    .collapse.in {
+      display:block !important;
     }
 }
